# NetworkAppsFinal

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/prompt-log/: README.md
docs/assignment/: README.md  docx_text_lines.txt  final_project_option_3_v3.docx
docs/references/: README.md
src/ref620_modbus_client/: __init__.py  app.py  config.py  modbus.py  points.py  setting_group.py  test_modbus.py  view_csv.py
tests/: test_modbus_decoding.py
